syntax = "proto3";

package grpc;
option java_multiple_files = true;
option java_package = "com.example.pojo.unary";

import "controller/status_enum.proto";

message GreetingRequest{
    string message = 1;
    int32 no = 2;
    bool status = 3;
    map<string, string> data = 4;
}

message RejectRequest{
    string message = 1;
    int32 no =2;
}

message GreetingResponse{
    string description = 1;
    Status status =2;
}

service GreetingService{
    rpc greet(GreetingRequest) returns (GreetingResponse) {}
    rpc reject(RejectRequest) returns (GreetingResponse) {}
}
